--- a/noteswap/docker-compose.yml
+++ b/noteswap/docker-compose.yml
@@ -10,9 +10,9 @@ services:
       - db
 
   db:
-    image: postgres:13
+    image: postgres:17
     environment:
-      POSTGRES_DB: noteswap
+      POSTGRES_DB: noteswap_db
       POSTGRES_USER: noteswap_user
       POSTGRES_PASSWORD: password
     ports:
